fixed animated text and overflow

--- a/src/pages/Contacts/styles.scss
+++ b/src/pages/Contacts/styles.scss
@@ -6,6 +6,7 @@
 	align-items: center;
 	flex-wrap: wrap;
 	gap: 30px 0;
+	height: calc(100vh - 152.72px);
 }
 .contact-me {
 }
